# Task-manager

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  TG_Task_BOT.json  build.rs  docker-compose.yml  docker-entrypoint.sh  promt.md
.claude/: launch.json  settings.local.json
docs/: assignee-resolution-contract.md  callback-contract.md  client-functional-overview.md  current-functionality-contract.md  feature-flags.md  google-sheets-test-employees.csv  memory.md  operations.md  production-readiness-2026-05-06.md  quality-roadmap.md  role-permission-matrix.md  screen-lifecycle-contract.md  system-model.md  telegram-ux.md  ux-style-guide.md
migrations/: 001_initial_schema.sql  002_collaboration_and_delivery.sql  003_assignment_recovery_indexes.sql  004_user_employee_links.sql  005_employees_remove_full_name_unique.sql  006_user_profile_v2.sql  007_admin_security_audit.sql  008_notifications_v2.sql  009_person_trigrams_and_idempotency.sql  010_voice_processing.sql  011_sla_and_working_calendar.sql  012_templates_and_recurrence.sql  013_composite_indexes.sql  014_drop_app_logs.sql  015_employee_source.sql  016_aliases_history_sheets_writeback.sql  017_voice_transcript_storage.sql  018_sheets_writeback_backoff.sql
src/: lib.rs  main.rs
tests/: admin_use_case_tests.rs  assignee_linked_user_resolution_tests.rs  assignee_resolution_unit_tests.rs  deadline_kernel_tests.rs  display_name_tests.rs  employee_repository_integration.rs  gateway_regression.rs  gemini_prompt_schema_tests.rs  http_observability_tests.rs  name_matching_tests.rs  notification_processing_tests.rs  onboarding_double_reply_regression.rs  parser_tests.rs  person_trigram_index_tests.rs  ranked_resolver_tests.rs  rbac_last_admin_tests.rs  register_user_recovery_tests.rs  scenario_coverage_tests.rs  screen_stage_policy_tests.rs  (+6 more)
(+151 files in other folders)
