[package]
name = "telegram-task-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.7.9", features = ["json"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
cron = "0.16.0"
dotenvy = "0.15.7"
governor = { version = "0.7.0", default-features = false, features = ["std"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.16.2"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "json", "macros", "migrate", "runtime-tokio-rustls", "sqlite", "uuid"] }
strsim = "0.11.1"
teloxide = { version = "0.15.0", features = ["ctrlc_handler", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.17"
tower = { version = "0.5.2", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.5.2", features = ["util"] }
